--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -7,13 +7,30 @@
 
 html, body, #___gatsby {
   height: 100%;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
-  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
   border: 0;
+}
+
+a {
+  color: #307FE2;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.react-sharing-button__link {
+  margin: 1rem 0.5rem;
+}
+
+.react-sharing-button__text {
+  display: none;
 }
 
 #gatsby-focus-wrapper {
@@ -26,7 +43,7 @@ body {
   background-color: #f6f8fa;
 }
 
-header {
+.header {
   position: relative;
   display: flex;
   background-color: #003366;
