--- a/src/templates/article-page.scss
+++ b/src/templates/article-page.scss
@@ -1,27 +1,131 @@
-.article {
+@import "reset-css";
+@import "../components/mixins/respond-to";
+
+.article-page {
+  @include respond-to("md") {
+    display: grid;
+    grid-template-columns: 1fr auto;
+  }
+}
+
+.article-page__header {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 1rem 0;
+  text-align: center;
+  font-size: 14px;
+
+  & > span {
+    position: relative;
+    padding-left: 14px;
+    margin-right: 6px;
+
+    &:first-child {
+      padding-left: 0;
+      &::before {
+        display: none;
+      }
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &::before {
+      content: "\00b7";
+      position: absolute;
+      left: 0;
+      top: -3px;
+      font-size: 20px;
+    }
+
+    a {
+      text-transform: uppercase;
+      font-weight: 600;
+    }
+  }
+
+  strong {
+    font-weight: 600;
+  }
+}
+
+.article-page__article {
   max-width: 992px;
   margin: 0 auto;
   padding: 0 1rem;
-  
-  img {
+
+  img,
+  .gatsby-image-wrapper {
     width: 100%;
     margin-bottom: 28px;
   }
-  
+
   h1 {
     text-align: center;
-    line-height: 56px;
-    font-size: 48px;
+    line-height: 66px;
+    font-size: 60px;
     font-weight: 900;
     letter-spacing: -1.2px;
-    margin-top: 28px;
-    margin-bottom: 56px;
+    margin-bottom: 24px;
   }
-  
+
   p {
     font-size: 18px;
     line-height: 28px;
     font-weight: 400;
     margin-bottom: 28px;
+  }
+}
+
+.article-page__related-articles {
+  padding: 1rem;
+
+  @include respond-to("md") {
+    padding-left: 0;
+
+    & > .card {
+      position: sticky;
+      top: 1rem;
+    }
+  }
+}
+
+.article-page__related-article {
+  margin-bottom: 1rem;
+
+  @include respond-to("md") {
+    display: flex;
+
+    &> a {
+      display: block;
+      width: 50%;
+      .gatsby-image-wrapper {
+        flex: 1;
+      }
+    }
+
+    p {
+      flex: 1;
+      margin-left: 0.5rem;
+
+      a {
+        color: #036;
+      }
+    }
+  }
+}
+
+.article-page__share-icons {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 1rem;
+  border-top: 1px solid #cedfef;
+  border-bottom: 1px solid #cedfef;
+
+  .react-sharing-button__link {
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
