- Added home page - Updated styles - Added stocks to header

--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -1,9 +1,15 @@
 .card {
+  display: block;
+  background-color: #ffffff;
   border: 1px solid #cedfef;
-  padding: 1rem;
+  
+  &--body {
+    padding: 1rem;
 
-  h3 {
-    font-size: 21px;
-    margin-bottom: 1rem;
+    h3 {
+      font-size: 21px;
+      margin-bottom: 1rem;
+      text-transform: capitalize;
+    }
   }
 }
