--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,19 +1,23 @@
 @import "reset-css";
+
 @import "./mixins/respond-to";
 
 * {
   box-sizing: border-box;
 }
 
-html, body, #___gatsby {
+html,
+body,
+#___gatsby {
   height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   margin: 0;
   padding: 0;
   border: 0;
+  color: #222;
 }
 
 a {
@@ -30,7 +34,11 @@ a {
 }
 
 .react-sharing-button__text {
-  display: none;
+  visibility: hidden;
+  position: absolute;
+  overflow: hidden;
+  width: 0;
+  height: 0;
 }
 
 #gatsby-focus-wrapper {
@@ -46,23 +54,46 @@ a {
 .header {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   background-color: #003366;
   border-top: 4px solid #c20017;
   color: #ffffff;
-  padding: 0.8rem 1rem;
 
   a {
     color: #ffffff;
     text-decoration: none;
-    
+
     &:hover {
       color: #edf6ff;
     }
   }
 
-  & > div {
+  &__callout {
+    color: #c20017;
+  }
+
+  &__logo {
+    position: absolute;
+    left: 1rem;
+    top: 0.5rem;
+    bottom: 0.5rem;
+
+    @include respond-to("md", "max") {
+      display: none;
+    }
+
+    img {
+      width: calc(100px - 1rem);
+      height: calc(100px - 1rem);
+    }
+  }
+
+  &__main,
+  &__secondary {
     font-weight: bold;
     display: flex;
+    align-items: center;
+    height: 50px;
 
     & > h1 {
       font-size: 1.6em;
@@ -71,40 +102,68 @@ a {
       margin-bottom: 2px;
     }
 
-    & > ul {
+    ul {
       position: absolute;
       display: none;
       top: 100%;
       left: 0;
       right: 0;
       background-color: #003366;
-      
-      & > li {
+
+      li {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        
-        * {
-          font-size: 14px;
+        font-size: 14px;
+
+        & > * {
           display: inline-block;
           padding: 0.5rem;
         }
-        
+
         a {
-          transition: background-color .2s linear;
+          transition: background-color 0.2s linear;
         }
       }
-    }
 
-    @include respond-to('md') {
+    }
+    
+    @include respond-to("md") {
+      padding-left: calc(100px + 1rem);
+      
       & > ul {
         position: relative;
         display: flex;
         top: unset;
-        
+
         & > li > a:hover {
           background-color: #40668c;
           border-radius: 3px;
+        }
+      }
+    }
+  }
+
+  &__secondary {
+    width: 100%;
+    background-color: #ffffff;
+    color: #222;
+
+    @include respond-to('md', 'max') {
+      display: none;
+    }
+
+    ul {
+      background-color: #ffffff;
+      li {
+        a {
+          color: #036;
+
+          &:hover {
+            color: #036;
+            background-color: #ffffff;
+            text-decoration: underline;
+          }
         }
       }
     }
@@ -117,7 +176,7 @@ footer {
   padding: 1rem;
   background-color: #003366;
   color: #ffffff;
-  
+
   a {
     color: #ffffff;
   }
@@ -125,11 +184,13 @@ footer {
 
 .hamburger {
   fill: #ffffff;
-  margin-right: 1rem;
+  margin: 0 1rem;
   user-select: none;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 
-  @include respond-to('md') {
+  @include respond-to("md") {
     display: none;
   }
 }
@@ -145,12 +206,12 @@ footer {
     fill: gray;
   }
 
-  @include respond-to('md', 'max') {
+  @include respond-to("md", "max") {
     &:checked ~ div > ul {
       display: block;
       z-index: 2;
     }
-  
+
     &:checked ~ .header-overlay {
       display: block;
       position: static;
