--- a/src/templates/article-page.scss
+++ b/src/templates/article-page.scss
@@ -2,7 +2,7 @@
 @import "../components/mixins/respond-to";
 
 .article-page {
-  @include respond-to("md") {
+  @include respond-to("lg") {
     display: grid;
     grid-template-columns: 1fr auto;
   }
@@ -40,7 +40,7 @@
     }
 
     a {
-      text-transform: uppercase;
+      text-transform: capitalize;
       font-weight: 600;
     }
   }
@@ -68,6 +68,7 @@
     font-weight: 900;
     letter-spacing: -1.2px;
     margin-bottom: 24px;
+    text-transform: capitalize;
   }
 
   p {
@@ -76,15 +77,19 @@
     font-weight: 400;
     margin-bottom: 28px;
   }
+
+  strong {
+    font-weight: bold;
+  }
 }
 
 .article-page__related-articles {
   padding: 1rem;
 
-  @include respond-to("md") {
+  @include respond-to("lg") {
     padding-left: 0;
 
-    & > .card {
+    & > aside {
       position: sticky;
       top: 1rem;
     }
@@ -93,11 +98,34 @@
 
 .article-page__related-article {
   margin-bottom: 1rem;
+  border-bottom: 1px solid #cddff0;
+  padding-bottom: 1rem;
 
-  @include respond-to("md") {
+  &:first-child, &:last-child {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  p {
+    text-transform: capitalize;
+  }
+
+  @include respond-to("lg", "max") {
+    & > a {
+      .gatsby-image-wrapper {
+        margin-bottom: 0.5rem;
+      }
+    }
+  }
+
+  @include respond-to("lg") {
     display: flex;
 
-    &> a {
+    & > a {
       display: block;
       width: 50%;
       .gatsby-image-wrapper {
