--- a/src/components/templates/article-page.scss
+++ b/src/components/templates/article-page.scss
@@ -2,14 +2,55 @@
 @import "../mixins/respond-to";
 
 .article-page {
-  @include respond-to("lg") {
-    display: grid;
-    grid-template-columns: 1fr auto;
+  display: grid;
+  grid-template-areas: "h" "a" "r" "ra";
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto auto;
+}
+
+.article-page__header {
+  grid-area: h;
+  padding: 1rem;
+}
+
+.article-page__article {
+  grid-area: a;
+  padding: 1rem;
+}
+
+.article-page__related-articles {
+  grid-area: r;
+  min-width: 0;
+  padding: 1rem;
+}
+
+.article-page__real-articles {
+  grid-area: ra;
+  min-width: 0;
+  padding: 1rem;
+}
+
+.article-page__comments {
+  margin: 4rem 0;
+}
+
+@include respond-to("md") {
+  .article-page {
+    grid-template-areas: "r h" "r a" "ra a";
+    grid-template-columns: 0.6fr 1.4fr;
+    grid-template-rows: auto auto auto;
+  }
+}
+
+@include respond-to("lg") {
+  .article-page {
+    grid-template-areas: ". h ." "r a ra" "r a ra";
+    grid-template-columns: 0.7fr 1.6fr 0.7fr;
+    grid-template-rows: auto auto auto;
   }
 }
 
 .article-page__header {
-  max-width: 960px;
   margin: 0 auto;
   padding: 1rem 0;
   text-align: center;
@@ -50,13 +91,6 @@
   }
 }
 
-.article-page__comments {
-  width: 100%;
-  max-width: 992px;
-  margin: 0 auto;
-  padding: 0 1rem;
-}
-
 .article-page__article {
   max-width: 992px;
   margin: 0 auto;
@@ -90,62 +124,62 @@
   }
 }
 
-.article-page__related-articles {
-  padding: 1rem;
+// .article-page__related-articles {
+//   padding: 1rem;
 
-  @include respond-to("lg") {
-    padding-left: 0;
+//   @include respond-to("lg") {
+//     padding-left: 0;
 
-    & > aside {
-      position: sticky;
-      top: 1rem;
-    }
-  }
-}
+//     & > aside {
+//       position: sticky;
+//       top: 1rem;
+//     }
+//   }
+// }
 
-.article-page__related-article {
-  margin-bottom: 1rem;
-  border-bottom: 1px solid #cddff0;
-  padding-bottom: 1rem;
+// .article-page__related-article {
+//   margin-bottom: 1rem;
+//   border-bottom: 1px solid #cddff0;
+//   padding-bottom: 1rem;
 
-  &:first-child, &:last-child {
-    border-bottom: none;
-    padding-bottom: 0;
-  }
+//   &:first-child, &:last-child {
+//     border-bottom: none;
+//     padding-bottom: 0;
+//   }
 
-  &:last-child {
-    margin-bottom: 0;
-  }
+//   &:last-child {
+//     margin-bottom: 0;
+//   }
 
-  p {
-    text-transform: capitalize;
-  }
+//   p {
+//     text-transform: capitalize;
+//   }
 
-  @include respond-to("lg", "max") {
-    & > a {
-      .gatsby-image-wrapper {
-        margin-bottom: 0.5rem;
-      }
-    }
-  }
+//   @include respond-to("lg", "max") {
+//     & > a {
+//       .gatsby-image-wrapper {
+//         margin-bottom: 0.5rem;
+//       }
+//     }
+//   }
 
-  @include respond-to("lg") {
-    display: flex;
+//   @include respond-to("lg") {
+//     display: flex;
 
-    & > a {
-      display: block;
-      width: 50%;
-      .gatsby-image-wrapper {
-        flex: 1;
-      }
-    }
+//     & > a {
+//       display: block;
+//       width: 50%;
+//       .gatsby-image-wrapper {
+//         flex: 1;
+//       }
+//     }
 
-    p {
-      flex: 1;
-      margin-left: 0.5rem;
-    }
-  }
-}
+//     p {
+//       flex: 1;
+//       margin-left: 0.5rem;
+//     }
+//   }
+// }
 
 .article-page__share-icons {
   display: flex;
